<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_gimbal_controller</name>
  <version>0.1.0</version>
  <description>Serial port hardware interface.</description>
  <maintainer email="chen.junn@outlook.com">Chen Jun</maintainer>
  <license>MIT</license>
  <author email="chen.junn@outlook.com">Chen Jun</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2</depend>
  <depend>angles</depend>
  <depend>forward_command_controller</depend>
  <depend>control_toolbox</depend>
  <depend>realtime_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>auto_aim_interfaces</depend>

  <build_depend>pluginlib</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
