<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_pioneer_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chen.junn@outlook.com">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rm_pioneer_control_bringup</depend>
  <depend>rm_pioneer_description</depend>
  <depend>rm_pioneer_hardware</depend>
  <depend>rm_gimbal_controller</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
