<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_pioneer_hardware</name>
  <version>0.1.0</version>
  <description>Serial port hardware interface.</description>
  <maintainer email="chen.junn@outlook.com">Chen Jun</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/chenjunnn/rm_auto_aim</url>
  <url type="bugtracker">https://github.com/chenjunnn/rm_auto_aim/issues</url>
  <author email="chen.junn@outlook.com">Chen Jun</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
